--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a style="text-shadow: #32ce9d 1px 0 15px;">ТЕЛЕФОН</a>
         </div>
         <div class="phone-text">
-            +375(29)665-18-66
+            <a href="tel:+375296651866" style="text-decoration: none; color: white;">+375 29 665 18 66</a>
         </div>
         <div class="work">
             <a style="text-shadow: #32ce9d 1px 0 15px;">ЧАСЫ РАБОТЫ</a>
