--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             ПН-ВС | 10:00 - 21:00
         </div>
         <div class="btn">
-            <a class="button" href="https://b55366.yclients.com/company/72625/menu">ЗАПИСАТЬСЯ ОНЛАЙН</a>
+            <button class="button" href="https://b55366.yclients.com/company/72625/menu">ЗАПИСАТЬСЯ ОНЛАЙН</button>
         </div>
     </div>
     <script src="snowfall.js"></script>
