--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <script src="snowfall.js"></script>
     <script type="text/javascript">
         $(document).ready(function(){
-            $(document).snowfall({ shadow: true, round: true, minSize: 5, maxSize: 8 });
+            $(document).snowfall({ shadow: true, round: true, minSize: 5, maxSize: 8, maxSpeed:5});
         });
     </script>
 </body>
