--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             ПН-ВС | 10:00 - 21:00
         </div>
         <div class="btn">
-            <button class="button" href="https://b55366.yclients.com/company/72625/menu">ЗАПИСАТЬСЯ ОНЛАЙН</button>
+            <form action="https://b55366.yclients.com/company/72625/menu" target="_blank" style="text-decoration: none;">
+            <button class="button" style="text-decoration: none;">ЗАПИСАТЬСЯ ОНЛАЙН</button>
         </div>
     </div>
     <script src="snowfall.js"></script>
