--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <title>Барбершоп Firma</title>
 </head>
-<body>
+<body class="body">
     <div class="header">
         <div class="container">
             <div class="header-line">
